[package]
name = "rust-queue"
version = "0.1.0"
description = "Lightweight message queue with Rust"
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
rusqlite = "0.25"
tokio = { version = "1", features = ["full"] }
bytes = "1"
tracing = "0.1.34"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
once_cell = "1"

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6", "channel-api", "promise-api", "try-catch-api"]
